delete ep added and response checkUser updated
