# swagger_server/swagger/swagger.yaml
@@ -29,6 +29,32 @@ paths:
         "404":
           description: Not found users yet
       x-openapi-router-controller: swagger_server.controllers.all_users_controller.AllUsersView
+  /users/{code_email}:
+    delete:
+      tags:
+      - Delete User
+      summary: Eliminar usuario.
+      description: Eliminar usuario.
+      operationId: delete_user
+      parameters:
+      - name: code_email
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          title: code_email
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseDeleteUser'
+        "404":
+          description: User invalid
+      x-openapi-router-controller: swagger_server.controllers.delete_user_controller.DeleteUserView
   /checkUser:
     post:
       tags:
@@ -423,6 +449,23 @@ components:
         email: j.alcaraz@xtrim.ec
         status: ACTIVO
         password: Sditq124$
+    ResponseDeleteUser:
+      properties:
+        code:
+          type: string
+          example: "0"
+        message:
+          type: string
+          example: Usuario eliminado exitosamente.
+        internalTransactionId:
+          type: string
+          format: uuid
+          example: d290f1ee-6c54-4b01-90e6-d701748f0851
+        externalTransactionId:
+          type: string
+          example: fcea920f7412b5da7be0cf42b8c93759
+        data:
+          $ref: '#/components/schemas/UserData'
     ResponseResetPassword:
       properties:
         code:
